--- a/Project_KeepFit/web/feed.html
+++ b/Project_KeepFit/web/feed.html
@@ -17,7 +17,11 @@
 
     <script>
         $(document).ready(function () {
-            $('.bxslider').bxSlider();
+            $('.bxslider').bxSlider({
+                infiniteLoop: false,
+                pagerType: 'full',
+                minSlides: 2,
+            });
         });
     </script>
 
@@ -39,15 +43,14 @@
 <!-- app bar -->
 <div class="container text-left"
      style="background-color:#f9f9f9;height:40px;border-bottom:solid 1px #b2b2b2; position: fixed; top:22px; width:100%; z-index:2;">
-    <h2 style="margin-top:4px; color:#00306a; font-size: 20px">KEEP-FIT</h2>
+    <h2 style="margin:11px; color:#00306a; font-size: 17px">KEEP-FIT</h2>
 </div>
 
 <div class="container" style="overflow:hidden;">
-
     <!--포스팅 글-->
     <div class="row" style="margin-top: 70px; margin-bottom: 8px">
         <!--        프로필 사진 -->
-        <div class="col-xs-2" style="width: 20%">
+        <div class="col-xs-2" style="float: left; width: 20%">
             <img width="100%" class="img-circle" src="img/profile.png" alt="profile">
         </div>
         <div class="col-xs-8" style="padding-left: 0;">
