--- a/Project_KeepFit/web/feed.html
+++ b/Project_KeepFit/web/feed.html
@@ -7,7 +7,7 @@
     <title>FEED</title>
 
     <!--bx slider-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="js/jquery-3.4.1.js"></script>
     <link rel="stylesheet" href="css/jquery.bxslider.css">
     <script src="js/jquery.bxslider.js"></script>
 
@@ -24,6 +24,7 @@
             });
         });
     </script>
+    <script src="js/feed.js" type="text/javascript"></script>
 
     <!--    &lt;!&ndash;[if lt IE 9]>-->
     <!--    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>-->
@@ -43,14 +44,15 @@
 <!-- app bar -->
 <div class="container text-left"
      style="background-color:#f9f9f9;height:40px;border-bottom:solid 1px #b2b2b2; position: fixed; top:22px; width:100%; z-index:2;">
-    <h2 style="margin:11px; color:#00306a; font-size: 17px">KEEP-FIT</h2>
+    <h2 style="margin-top:4px; color:#00306a; font-size: 20px">KEEP-FIT</h2>
 </div>
 
 <div class="container" style="overflow:hidden;">
+
     <!--포스팅 글-->
     <div class="row" style="margin-top: 70px; margin-bottom: 8px">
         <!--        프로필 사진 -->
-        <div class="col-xs-2" style="float: left; width: 20%">
+        <div class="col-xs-2" style="width: 20%">
             <img width="100%" class="img-circle" src="img/profile.png" alt="profile">
         </div>
         <div class="col-xs-8" style="padding-left: 0;">
@@ -79,12 +81,14 @@
     </div>
     <div class="row" style="padding: 15px 10px; ">
         <div style="float: left">
-            <img src="img/heart.svg" style="margin-left: 10px"><a
-                style="margin-left: 5px;margin-right: 20px; color: #000;">좋아요</a>
-            <img src="img/comment.svg"><a style="margin-left: 5px; color: #000;">댓글</a>
+            <img id="likeIt" src="img/heart.svg" style="margin-left: 10px">
+            <a href="https://naver.com" style="margin-left: 5px;margin-right: 20px; color: #000;">좋아요</a>
+            <img src="img/comment.svg">
+            <a href="https://nate.com" style="margin-left: 5px; color: #000;">댓글</a>
         </div>
         <div style="float: right">
-            <img src="img/share.svg"><a style="margin-left: 5px;margin-right: 10px; color: #000;">공유</a>
+            <img src="img/share.svg">
+            <a href="https://nate.com" style="margin-left: 5px;margin-right: 10px; color: #000;">공유</a>
         </div>
     </div>
     <div class="row">
