sign in // log in (view & js)

--- a/Project_KeepFit/web/thumbnail.html
+++ b/Project_KeepFit/web/thumbnail.html
@@ -21,7 +21,7 @@
 </div>
 <table border="1" style="width: 100%; margin-bottom: 2px">
     <tr>
-        <td>검색창이 들어갈 부분</td>
+        <td>&nbsp; &nbsp; 검색창이 들어갈 부분</td>
         <td style="text-align: center"><img src="img/search-96.png" style="width: 30px; height: 30px;" alt="이미지 로딩 실패"></td>
     </tr>
 </table>
