--- a/Project_KeepFit/web/feed.html
+++ b/Project_KeepFit/web/feed.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FEED</title>
 
+    <script
+            src="https://code.jquery.com/jquery-2.2.4.js"
+            integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
+            crossorigin="anonymous">
+    </script>
+
     <!--bx slider-->
-    <script src="js/jquery-3.4.1.js"></script>
     <link rel="stylesheet" href="css/jquery.bxslider.css">
     <script src="js/jquery.bxslider.js"></script>
 
@@ -33,24 +38,19 @@
 
 </head>
 <body>
-<!-- status bar -->
-<div class="row"
-     style="padding:0; position:fixed; top:0; width:100%; z-index:2; height:24px; background-color:#f9f9f9;  margin:0;">
-    <div class="col-xs-12" style=" background-color:#f9f9f9; padding: 0">
-        <img src="img/status.png" style="height: 24px; width: 100%; align-content: center" alt="status-bar">
-    </div>
-</div>
+
 
 <!-- app bar -->
 <div class="container text-left"
-     style="background-color:#f9f9f9;height:40px;border-bottom:solid 1px #b2b2b2; position: fixed; top:22px; width:100%; z-index:2;">
-    <h2 style="margin-top:4px; color:#00306a; font-size: 20px">KEEP-FIT</h2>
+     style="background-color:#f9f9f9;height:40px;border-bottom:solid 1px #b2b2b2; width:100%; z-index:2; position: fixed">
+    <h2 style="margin-top:9px; color:#00306a; font-size: 20px">KEEP-FIT</h2>
 </div>
 
 <div class="container" style="overflow:hidden;">
-
+    <!--    맨 위 간격 맞추기 -->
+    <div class="row" style="margin-top: 53px"></div>
     <!--포스팅 글-->
-    <div class="row" style="margin-top: 70px; margin-bottom: 8px">
+    <div class="row" style="margin-bottom: 8px">
         <!--        프로필 사진 -->
         <div class="col-xs-2" style="width: 20%">
             <img width="100%" class="img-circle" src="img/profile.png" alt="profile">
@@ -81,7 +81,7 @@
     </div>
     <div class="row" style="padding: 15px 10px; ">
         <div style="float: left">
-            <img id="likeIt" src="img/heart.svg" style="margin-left: 10px">
+            <img name="likeIt" src="img/heart.svg" style="margin-left: 10px">
             <a href="https://naver.com" style="margin-left: 5px;margin-right: 20px; color: #000;">좋아요</a>
             <img src="img/comment.svg">
             <a href="https://nate.com" style="margin-left: 5px; color: #000;">댓글</a>
@@ -125,7 +125,7 @@
     </div>
     <div class="row" style="padding: 15px 10px; ">
         <div style="float: left">
-            <img src="img/heart.svg" style="margin-left: 10px"><a
+            <img name="likeIt" src="img/heart.svg" style="margin-left: 10px"><a
                 style="margin-left: 5px;margin-right: 20px; color: #000;">좋아요</a>
             <img src="img/comment.svg"><a style="margin-left: 5px; color: #000;">댓글</a>
         </div>
