--- a/Project_KeepFit/web/signUp.html
+++ b/Project_KeepFit/web/signUp.html
@@ -20,7 +20,7 @@
     회원가입 화면
 </div>
 <div class="container">
-    <form class="form-group-lg" id="myForm">
+    <form class="form-group-lg" id="myForm" action="signUpExtra.html" method="get">
         <div>
             <input class="form-control" type="email" placeholder="이메일을 입력해주세요" required autofocus>
         </div>
