--- a/Project_KeepFit/web/login.html
+++ b/Project_KeepFit/web/login.html
@@ -19,7 +19,7 @@
     로그인 화면
 </div>
 <div class="container">
-    <form class="form-group-lg" action="loginOk.html" method="get">
+    <form class="form-group-lg" action="okPage.html" method="get">
         <div>
             <input class="form-control" name="email" type="email" placeholder="이메일을 입력해주세요" required autofocus>
         </div>
