--- a/Project_KeepFit/web/signUpExtra.html
+++ b/Project_KeepFit/web/signUpExtra.html
@@ -21,7 +21,7 @@
 <div style="font-size:30px; height: 150px; line-height: 150px; text-align: center;">
     추가 정보 입력 화면
 </div>
-<form class="form-group-lg" action="loginOk.html" method="get" style="chil">
+<form class="form-group-lg" action="okPage.html" method="get" style="chil">
     <div style="text-align: center">
         <input class="input-lg " name="nickname" type="text" placeholder="닉네임을 입력해주세요" width="100%">
     </div>
