--- a/Project_KeepFit/web/posting.html
+++ b/Project_KeepFit/web/posting.html
@@ -79,8 +79,7 @@
 
             $('#submit').click(function () {
                 var imgSrc = $('#img').attr('src');
-                console.log(imgSrc);
-                alert(imgSrc);
+                $('#imgSrc').val(imgSrc);
             })
         });
     </script>
@@ -103,6 +102,7 @@
         <!-- 썸네일 -->
         <div class="input-group" style="float: right; align-content: baseline">
             <img id="img" src="//via.placeholder.com/150x200" alt="150x200" class="img-thumbnail">
+            <input type="hidden" id="imgSrc" name="imgSrc" value="">
         </div>
 
         <div class="input-icon-wrap" style="margin: 1px 0px;">
