--- a/Project_KeepFit/web/signUpExtra.html
+++ b/Project_KeepFit/web/signUpExtra.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>회원가입 추가 정보란</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <script
             src="https://code.jquery.com/jquery-2.2.4.js"
