--- a/Project_KeepFit/web/thumbnail.html
+++ b/Project_KeepFit/web/thumbnail.html
@@ -3,15 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>썸네일</title>
 
     <script src="js/jquery-3.4.1.js"></script>
 
+    <!-- 아이콘 제공 사이트, https://fontawesome.com-->
+    <script src="https://kit.fontawesome.com/0c46a3b816.js"></script>
     <!-- Bootstrap -->
     <script src="js/bootstrap.js"></script>
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/thumbnail.css" rel="stylesheet">
+
+    <style>
+        .effect div img {
+            border-radius: 20px;
+            padding: 2px;
+        }
+    </style>
 </head>
 <body>
 
@@ -19,15 +28,13 @@
      style="background-color:#f9f9f9;height:40px;border-bottom:solid 1px #b2b2b2; top:22px; width:100%; z-index:2;">
     <h2 style="margin-top:9px; color:#00306a; font-size: 20px">KEEP-FIT</h2>
 </div>
-<table border="1" style="width: 100%; margin-bottom: 2px">
-    <tr>
-        <td>&nbsp; &nbsp; 검색창이 들어갈 부분</td>
-        <td style="text-align: center"><img src="img/search-96.png" style="width: 30px; height: 30px;" alt="이미지 로딩 실패"></td>
-    </tr>
-</table>
 
+<div class="row" style="margin: 5px; text-align: center">
+    <b>좋아요 리스트</b>
+</div>
+<hr style="margin:2px">
 <div class="container" style="margin: 2px">
-    <div class="row">
+    <div class="row effect">
         <div class="col-xs-4" style="border: solid 1px #fffdff; padding:0;">
             <img src="img/1.jpg" width="100%" style="margin:0px;">
         </div>
@@ -38,7 +45,7 @@
             <img src="img/3.jpg" width="100%" style="margin:0px;">
         </div>
     </div>
-    <div class="row">
+    <div class="row effect">
         <div class="col-xs-4" style="border: solid 1px #fffdff; padding:0px;">
             <img src="img/4.jpg" width="100%" style="margin:0px;">
         </div>
@@ -49,7 +56,7 @@
             <img src="img/1.jpg" width="100%" style="margin:0px;">
         </div>
     </div>
-    <div class="row">
+    <div class="row effect">
         <div class="col-xs-4" style="border: solid 1px #fffdff; padding:0px;">
             <img src="img/2.jpg" width="100%" style="margin:0px;">
         </div>
@@ -60,7 +67,7 @@
             <img src="img/4.jpg" width="100%" style="margin:0px;">
         </div>
     </div>
-    <div class="row">
+    <div class="row effect">
         <div class="col-xs-4" style="border: solid 1px #fffdff; padding:0px;">
             <img src="img/5.jpg" width="100%" style="margin:0px;">
         </div>
@@ -71,7 +78,7 @@
             <img src="img/2.jpg" width="100%" style="margin:0px;">
         </div>
     </div>
-    <div class="row">
+    <div class="row effect">
         <div class="col-xs-4" style="border: solid 1px #fffdff; padding:0px;">
             <img src="img/3.jpg" width="100%" style="margin:0px;">
         </div>
