--- a/Project_KeepFit/web/signUp_test2.html
+++ b/Project_KeepFit/web/signUp_test2.html
@@ -43,11 +43,11 @@
             z-index: 1;
         }
 
-        .btn-2 {
+        .btn-facebook {
             background-color: #405D9D;
             color: #fff;
         }
-        .btn-1 {
+        .btn-twitter {
             background-color: #42AEEC;
             color: #fff;
         }
@@ -58,13 +58,11 @@
 <div class="container">
     <div class="card bg-light">
         <article class="card-body mx-auto" style="max-width: 400px;">
-            <h4 class="card-title mt-3 text-center">KEEP-FIT</h4>
-            <h6 class="card-title mt-3 text-center">Just Be You</h6>
-<!--            <p class="text-center">간편 가입 하기</p>-->
-            <div style="visibility: hidden;height: 20px;"></div>
+            <h4 class="card-title mt-3 text-center">회원 가입</h4>
+            <p class="text-center">간편 가입 하기</p>
             <p>
-                <a href="" class="btn btn-block btn-1"> <i class="fab fa-google"></i>   구글로 로그인</a>
-                <a href="" class="btn btn-block btn-2"> <i class="fab fa-google"></i>   카카오로 로그인</a>
+                <a href="" class="btn btn-block btn-twitter"> <i class="fab fa-twitter"></i>   Login via Twitter</a>
+                <a href="" class="btn btn-block btn-facebook"><i class="fab fa-facebook"></i>   Login via facebook</a>
             </p>
             <p class="divider-text">
                 <span class="bg-light">OR</span>
@@ -72,10 +70,39 @@
             <form>
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
+                        <span class="input-group-text"> <i class="fa fa-user"></i> </span>
+                    </div>
+                    <input name="" class="form-control" placeholder="Full name" type="text">
+                </div> <!-- form-group// -->
+                <div class="form-group input-group">
+                    <div class="input-group-prepend">
                         <span class="input-group-text"> <i class="fa fa-envelope"></i> </span>
                     </div>
                     <input name="" class="form-control" placeholder="Email address" type="email">
                 </div> <!-- form-group// -->
+                <div class="form-group input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text"> <i class="fa fa-phone"></i> </span>
+                    </div>
+                    <select class="custom-select" style="max-width: 120px;">
+                        <option selected="">+971</option>
+                        <option value="1">+972</option>
+                        <option value="2">+198</option>
+                        <option value="3">+701</option>
+                    </select>
+                    <input name="" class="form-control" placeholder="Phone number" type="text">
+                </div> <!-- form-group// -->
+                <div class="form-group input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text"> <i class="fa fa-building"></i> </span>
+                    </div>
+                    <select class="form-control">
+                        <option selected=""> Select job type</option>
+                        <option>Designer</option>
+                        <option>Manager</option>
+                        <option>Accaunting</option>
+                    </select>
+                </div> <!-- form-group end.// -->
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
                         <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
@@ -89,14 +116,26 @@
                     <input class="form-control" placeholder="Repeat password" type="password">
                 </div> <!-- form-group// -->
                 <div class="form-group">
-                    <button type="submit" class="btn btn-primary btn-block"> 로그인 </button>
+                    <button type="submit" class="btn btn-primary btn-block"> Create Account</button>
                 </div> <!-- form-group// -->
-                <p class="text-center">계정이 없으신가요?<a href="">&nbsp;가입하기</a></p>
+                <p class="text-center">Have an account? <a href="">Log In</a></p>
             </form>
         </article>
     </div> <!-- card.// -->
 
 </div>
 <!--container end.//-->
+
+<br><br>
+<article class="bg-secondary mb-3">
+    <div class="card-body text-center">
+        <h3 class="text-white mt-3">Bootstrap 4 UI KIT</h3>
+        <p class="h5 text-white">Components and templates <br> for Ecommerce, marketplace, booking websites
+            and product landing pages</p>   <br>
+        <p><a class="btn btn-warning" target="_blank" href="http://bootstrap-ecommerce.com/"> Bootstrap-ecommerce.com
+            <i class="fa fa-window-restore "></i></a></p>
+    </div>
+    <br><br>
+</article>
 </body>
 </html>
